Übernheme generierte Funktion zur Berehcnung der Friedmann Charakterisitik

--- a/docs/250317/viginere_brechen.ipynb
+++ b/docs/250317/viginere_brechen.ipynb
@@ -519,6 +519,52 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_friedman_characteristics(df):\n",
+    "    \"\"\"\n",
+    "    Calculate the Friedman characteristic for each column in the dataframe.\n",
+    "    \n",
+    "    The Friedman characteristic (Kappa) measures the index of coincidence:\n",
+    "    Kappa = Sum[(f_i * (f_i - 1)) / (N * (N - 1))]\n",
+    "    \n",
+    "    Where:\n",
+    "    - f_i is the frequency of the i-th letter in the column\n",
+    "    - N is the total number of letters in the column\n",
+    "    \n",
+    "    Returns:\n",
+    "    - pandas Series with Friedman characteristic for each column\n",
+    "    \"\"\"\n",
+    "    # Create an empty Series to store the results\n",
+    "    friedman_characteristics = pd.Series(index=df.columns)\n",
+    "    \n",
+    "    # For each column in the dataframe\n",
+    "    for col in df.columns:\n",
+    "        # Get the column as a Series and drop NaN values\n",
+    "        column = df[col].dropna()\n",
+    "        \n",
+    "        # Count the frequency of each letter\n",
+    "        value_counts = column.value_counts()\n",
+    "        \n",
+    "        # Calculate total number of characters\n",
+    "        N = len(column)\n",
+    "        \n",
+    "        # Calculate Friedman characteristic\n",
+    "        if N > 1:  # Avoid division by zero\n",
+    "            kappa = sum(f * (f - 1) for f in value_counts) / (N * (N - 1))\n",
+    "        else:\n",
+    "            kappa = 0\n",
+    "            \n",
+    "        # Store the result\n",
+    "        friedman_characteristics[col] = kappa\n",
+    "        \n",
+    "    return friedman_characteristics"
+   ]
   }
  ],
  "metadata": {
