Übernheme die Schlüssellängensuchfunkion

--- a/docs/250317/viginere_brechen.ipynb
+++ b/docs/250317/viginere_brechen.ipynb
@@ -304,225 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "counter = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['i', 'm', 'n', 'a', 'm', 'e', 'n', 'g', 'o', 't', 't', 'e', 's', 'd', 'e']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zeile0 = df.iloc[0].to_list()\n",
-    "zeile0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zeile0_count = {letter: 0 for letter in string.ascii_lowercase}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for letter in string.ascii_lowercase:\n",
-    "    for char in zeile0:\n",
-    "        if char == letter:\n",
-    "            zeile0_count[letter] += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>a</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>b</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>c</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>d</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>e</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   0\n",
-       "a  1\n",
-       "b  0\n",
-       "c  0\n",
-       "d  1\n",
-       "e  3"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_char_count = pd.DataFrame.from_dict(zeile0_count, orient='index', dtype=None, columns=None)\n",
-    "df_char_count.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def char_counter(df):\n",
-    "    size = len(df)\n",
-    "    row_list = []\n",
-    "    \n",
-    "    for i in range(size):\n",
-    "        row_list.append('zeile_' + str(i))\n",
-    "        row_list[i] = df.iloc[i].to_list()\n",
-    "        \n",
-    "    return row_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['i', 'm', 'n', 'a', 'm', 'e', 'n', 'g', 'o', 't', 't', 'e', 's', 'd', 'e'],\n",
-       " ['s', 'a', 'l', 'l', 'm', 'a', 'e', 'c', 'h', 't', 'i', 'g', 'e', 'n', 'd'],\n",
-       " ['a', 's', 's', 'c', 'h', 'w', 'e', 'i', 'z', 'e', 'r', 'v', 'o', 'l', 'k'],\n",
-       " ['u', 'n', 'd', 'd', 'i', 'e', 'k', 'a', 'n', 't', 'o', 'n', 'e', 'i', 'n'],\n",
-       " ['d', 'e', 'r', 'v', 'e', 'r', 'a', 'n', 't', 'w', 'o', 'r', 't', 'u', 'n'],\n",
-       " ['g', 'g', 'e', 'g', 'e', 'n', 'u', 'e', 'b', 'e', 'r', 'd', 'e', 'r', 's'],\n",
-       " ['c', 'h', 'o', 'e', 'p', 'f', 'u', 'n', 'g', 'i', 'm', 'b', 'e', 's', 't'],\n",
-       " ['r', 'e', 'b', 'e', 'n', 'd', 'e', 'n', 'b', 'u', 'n', 'd', 'z', 'u', 'e'],\n",
-       " ['r', 'n', 'e', 'u', 'e', 'r', 'n', 'u', 'm', 'f', 'r', 'e', 'i', 'h', 'e'],\n",
-       " ['i', 't', 'u', 'n', 'd', 'd', 'e', 'm', 'o', 'k', 'r', 'a', 't', 'i', 'e'],\n",
-       " ['u', 'n', 'a', 'b', 'h', 'a', 'e', 'n', 'g', 'i', 'g', 'k', 'e', 'i', 't'],\n",
-       " ['u', 'n', 'd', 'f', 'r', 'i', 'e', 'd', 'e', 'n', 'i', 'n', 's', 'o', 'l'],\n",
-       " ['i', 'd', 'a', 'r', 'i', 't', 'a', 'e', 't', 'u', 'n', 'd', 'o', 'f', 'f'],\n",
-       " ['e', 'n', 'h', 'e', 'i', 't', 'g', 'e', 'g', 'e', 'n', 'u', 'e', 'b', 'e'],\n",
-       " ['r', 'd', 'e', 'r', 'w', 'e', 'l', 't', 'z', 'u', 's', 't', 'a', 'e', 'r'],\n",
-       " ['k', 'e', 'n', 'i', 'm', 'w', 'i', 'l', 'l', 'e', 'n', 'i', 'n', 'g', 'e'],\n",
-       " ['g', 'e', 'n', 's', 'e', 'i', 't', 'i', 'g', 'e', 'r', 'r', 'u', 'e', 'c'],\n",
-       " ['k', 's', 'i', 'c', 'h', 't', 'n', 'a', 'h', 'm', 'e', 'u', 'n', 'd', 'a'],\n",
-       " ['c', 'h', 't', 'u', 'n', 'g', 'i', 'h', 'r', 'e', 'v', 'i', 'e', 'l', 'f'],\n",
-       " ['a', 'l', 't', 'i', 'n', 'd', 'e', 'r', 'e', 'i', 'n', 'h', 'e', 'i', 't'],\n",
-       " ['z', 'u', 'l', 'e', 'b', 'e', 'n', 'i', 'm', 'b', 'e', 'w', 'u', 's', 's'],\n",
-       " ['t', 's', 'e', 'i', 'n', 'd', 'e', 'r', 'g', 'e', 'm', 'e', 'i', 'n', 's'],\n",
-       " ['a', 'm', 'e', 'n', 'e', 'r', 'r', 'u', 'n', 'g', 'e', 'n', 's', 'c', 'h'],\n",
-       " ['a', 'f', 't', 'e', 'n', 'u', 'n', 'd', 'd', 'e', 'r', 'v', 'e', 'r', 'a'],\n",
-       " ['n', 't', 'w', 'o', 'r', 't', 'u', 'n', 'g', 'g', 'e', 'g', 'e', 'n', 'u'],\n",
-       " ['e', 'b', 'e', 'r', 'd', 'e', 'n', 'k', 'u', 'e', 'n', 'f', 't', 'i', 'g'],\n",
-       " ['e', 'n', 'g', 'e', 'n', 'e', 'r', 'a', 't', 'i', 'o', 'n', 'e', 'n', 'g'],\n",
-       " ['e', 'w', 'i', 's', 's', 'd', 'a', 's', 's', 'f', 'r', 'e', 'i', 'n', 'u'],\n",
-       " ['r', 'i', 's', 't', 'w', 'e', 'r', 's', 'e', 'i', 'n', 'e', 'f', 'r', 'e'],\n",
-       " ['i', 'h', 'e', 'i', 't', 'g', 'e', 'b', 'r', 'a', 'u', 'c', 'h', 't', 'u'],\n",
-       " ['n', 'd', 'd', 'a', 's', 's', 'd', 'i', 'e', 's', 't', 'a', 'e', 'r', 'k'],\n",
-       " ['e', 'd', 'e', 's', 'v', 'o', 'l', 'k', 'e', 's', 's', 'i', 'c', 'h', 'm'],\n",
-       " ['i', 's', 's', 't', 'a', 'm', 'w', 'o', 'h', 'l', 'd', 'e', 'r', 's', 'c'],\n",
-       " ['h', 'w', 'a', 'c', 'h', 'e', 'n', 'g', 'e', 'b', 'e', 'n', 's', 'i', 'c'],\n",
-       " ['h', 'f', 'o', 'l', 'g', 'e', 'n', 'd', 'e', 'v', 'e', 'r', 'f', 'a', 's'],\n",
-       " ['s',\n",
-       "  'u',\n",
-       "  'n',\n",
-       "  'g',\n",
-       "  None,\n",
-       "  None,\n",
-       "  None,\n",
-       "  None,\n",
-       "  None,\n",
-       "  None,\n",
-       "  None,\n",
-       "  None,\n",
-       "  None,\n",
-       "  None,\n",
-       "  None]]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = char_counter(df)\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,6 +346,93 @@
     "        friedman_characteristics[col] = kappa\n",
     "        \n",
     "    return friedman_characteristics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "friedmann = calc_friedman_characteristics(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.074963\n",
+       "1    0.069812\n",
+       "2    0.077582\n",
+       "3    0.071724\n",
+       "4    0.076267\n",
+       "5    0.075079\n",
+       "6    0.074543\n",
+       "7    0.075048\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "friedmann"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_best_key_length(ciphertext, max_length=20):\n",
+    "    \"\"\"\n",
+    "    Find the most likely key length for a Vigenère cipher by finding the number\n",
+    "    of columns that produces Friedman characteristics closest to German text.\n",
+    "    \n",
+    "    Args:\n",
+    "        ciphertext (str): The encrypted text\n",
+    "        max_length (int): Maximum key length to try\n",
+    "    \n",
+    "    Returns:\n",
+    "        int: Most likely key length\n",
+    "    \"\"\"\n",
+    "    min_diff = float('inf')\n",
+    "    best_length = 1\n",
+    "    differences = {}\n",
+    "    \n",
+    "    # Try different key lengths\n",
+    "    for length in range(1, max_length + 1):\n",
+    "        # Split text into columns\n",
+    "        df = text_teiler(ciphertext, length)\n",
+    "        \n",
+    "        # Calculate Friedman characteristics for each column\n",
+    "        characteristics = calc_friedman_characteristics(df)\n",
+    "        \n",
+    "        # Calculate average characteristic\n",
+    "        avg_characteristic = characteristics.mean()\n",
+    "        \n",
+    "        # Calculate difference from German characteristic\n",
+    "        diff = abs(avg_characteristic - KD)\n",
+    "        differences[length] = diff\n",
+    "        \n",
+    "        # If this is better than previous best, update\n",
+    "        if diff < min_diff:\n",
+    "            min_diff = diff\n",
+    "            best_length = length\n",
+    "    \n",
+    "    print(f\"Best key length: {best_length} with difference: {min_diff:.6f}\")\n",
+    "    print(\"All differences:\")\n",
+    "    for length, diff in differences.items():\n",
+    "        print(f\"Length {length}: {diff:.6f}\")\n",
+    "            \n",
+    "    return best_length"
    ]
   }
  ],
