Setze alles Zusammen

--- a/docs/250317/viginere_brechen.ipynb
+++ b/docs/250317/viginere_brechen.ipynb
@@ -479,6 +479,141 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# German letter frequency - ordered by frequency\n",
+    "GERMAN_FREQ = {\n",
+    "    'e': 0.1740, 'n': 0.0978, 'i': 0.0755, 's': 0.0727, 'r': 0.0700, 't': 0.0615,\n",
+    "    'a': 0.0651, 'd': 0.0508, 'h': 0.0476, 'u': 0.0435, 'l': 0.0344, 'c': 0.0306,\n",
+    "    'g': 0.0301, 'm': 0.0253, 'o': 0.0251, 'b': 0.0189, 'w': 0.0189, 'f': 0.0166,\n",
+    "    'k': 0.0121, 'z': 0.0113, 'p': 0.0079, 'v': 0.0067, 'j': 0.0027, 'y': 0.0004,\n",
+    "    'x': 0.0003, 'q': 0.0002\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_shifts(ciphertext, key_length):\n",
+    "    \"\"\"\n",
+    "    Calculate the shifts for each position in the key based on letter frequency analysis.\n",
+    "    \n",
+    "    Args:\n",
+    "        ciphertext (str): The encrypted text\n",
+    "        key_length (int): Length of the key\n",
+    "    \n",
+    "    Returns:\n",
+    "        tuple: (key string, decrypted text)\n",
+    "    \"\"\"\n",
+    "    # Split text into columns\n",
+    "    df = text_teiler(ciphertext, key_length)\n",
+    "    key = \"\"\n",
+    "    \n",
+    "    # For each column (each position in the key)\n",
+    "    for col in range(key_length):\n",
+    "        column_text = ''.join(df[col].dropna().tolist())\n",
+    "        \n",
+    "        best_score = float('-inf')\n",
+    "        best_shift = 0\n",
+    "        \n",
+    "        # Try all 26 possible shifts\n",
+    "        for shift in range(26):\n",
+    "            # Apply this shift and get resulting text\n",
+    "            shifted_text = ''.join(chr((ord(c) - ord('a') - shift) % 26 + ord('a')) for c in column_text)\n",
+    "            \n",
+    "            # Calculate frequency of each letter in shifted text\n",
+    "            freq = {}\n",
+    "            for char in string.ascii_lowercase:\n",
+    "                freq[char] = shifted_text.count(char) / len(shifted_text) if len(shifted_text) > 0 else 0\n",
+    "            \n",
+    "            # Calculate correlation with German frequency\n",
+    "            score = sum(freq[char] * GERMAN_FREQ[char] for char in string.ascii_lowercase)\n",
+    "            \n",
+    "            if score > best_score:\n",
+    "                best_score = score\n",
+    "                best_shift = shift\n",
+    "        \n",
+    "        # Convert shift to key character (a-z)\n",
+    "        key_char = chr((best_shift) % 26 + ord('a'))\n",
+    "        key += key_char\n",
+    "    \n",
+    "    # Decrypt the entire text using the found key\n",
+    "    decrypted_text = decrypt_vigenere(ciphertext, key)\n",
+    "    \n",
+    "    return key, decrypted_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decrypt_vigenere(ciphertext, key):\n",
+    "    \"\"\"\n",
+    "    Decrypt a Vigenère cipher using the given key.\n",
+    "    \n",
+    "    Args:\n",
+    "        ciphertext (str): The encrypted text\n",
+    "        key (str): The decryption key\n",
+    "    \n",
+    "    Returns:\n",
+    "        str: The decrypted text\n",
+    "    \"\"\"\n",
+    "    plaintext = \"\"\n",
+    "    key_length = len(key)\n",
+    "    \n",
+    "    for i, char in enumerate(ciphertext):\n",
+    "        # Get the corresponding key character\n",
+    "        key_char = key[i % key_length]\n",
+    "        \n",
+    "        # Calculate the shift value\n",
+    "        shift = ord(key_char) - ord('a')\n",
+    "        \n",
+    "        # Apply the shift\n",
+    "        plain_char = chr((ord(char) - ord('a') - shift) % 26 + ord('a'))\n",
+    "        plaintext += plain_char\n",
+    "    \n",
+    "    return plaintext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def break_vigenere_cipher(ciphertext, max_key_length=20):\n",
+    "    \"\"\"\n",
+    "    Break a Vigenère cipher by estimating key length and calculating shifts.\n",
+    "    \n",
+    "    Args:\n",
+    "        ciphertext (str): The encrypted text\n",
+    "        max_key_length (int): Maximum key length to try\n",
+    "    \n",
+    "    Returns:\n",
+    "        tuple: (key string, decrypted text)\n",
+    "    \"\"\"\n",
+    "    # Find the best key length\n",
+    "    key_length = find_best_key_length(ciphertext, max_key_length)\n",
+    "    \n",
+    "    # Calculate shifts and decrypt\n",
+    "    key, decrypted_text = calculate_shifts(ciphertext, key_length)\n",
+    "    \n",
+    "    print(f\"\\nEstimated key length: {key_length}\")\n",
+    "    print(f\"Discovered key: {key}\")\n",
+    "    print(f\"\\nDecrypted text (first 200 chars):\\n{decrypted_text[:200]}...\\n\")\n",
+    "    \n",
+    "    return key, decrypted_text"
+   ]
   }
  ],
  "metadata": {
