--- a/docs/250317/viginere_brechen.ipynb
+++ b/docs/250317/viginere_brechen.ipynb
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,6 +614,58 @@
     "    \n",
     "    return key, decrypted_text"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best key length: 12 with difference: 0.002573\n",
+      "All differences:\n",
+      "Length 1: 0.003009\n",
+      "Length 2: 0.002964\n",
+      "Length 3: 0.002940\n",
+      "Length 4: 0.003015\n",
+      "Length 5: 0.003025\n",
+      "Length 6: 0.002858\n",
+      "Length 7: 0.003139\n",
+      "Length 8: 0.002923\n",
+      "Length 9: 0.002765\n",
+      "Length 10: 0.003038\n",
+      "Length 11: 0.003151\n",
+      "Length 12: 0.002573\n",
+      "Length 13: 0.002898\n",
+      "Length 14: 0.003114\n",
+      "Length 15: 0.002943\n",
+      "Length 16: 0.002916\n",
+      "Length 17: 0.002913\n",
+      "Length 18: 0.002660\n",
+      "Length 19: 0.003098\n",
+      "Length 20: 0.003120\n",
+      "\n",
+      "Estimated key length: 12\n",
+      "Discovered key: ffffffffffff\n",
+      "\n",
+      "Decrypted text (first 200 chars):\n",
+      "generalstummdringtindiestaatsbibliothekeinundsammelterfahrungenueberbibliothekarebibliotheksdienerundgeistigeordnunggeneralstummhattedenmisserfolgseineskameradenbeobachtetundmachtemieneihnzutroestenwa...\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "deciphered = break_vigenere_cipher(chiffre_text, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
